[package]
name = "paillier-common"
version = "0.1.0"
edition = "2018"
authors = ["Robert Annessi <robert@nash.io>", "Ethan Fast <ethan@nash.io>"]
license = "MIT"
description = "paillier over bigint traits provided by rust-bigint"
repository = "https://github.com/nash-io/rust-paillier"
keywords = ["paillier", "cryptography", "homomorphic", "encryption"]

[features]
rust_gmp = ["rust-bigint/rust_gmp"]
num_bigint = ["rust-bigint/num_bigint", "num-traits", "num-integer"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }
rust-bigint = { version = "1.1", default-features = false}
rand = "0.6"


[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"
